# pyROT

./: .readthedocs.yml  CONTRIBUTING.md  README.md  pyproject.toml  ruff_defaults.toml
.github/workflows/: ci.yml  python-publish.yml  python-test-publish.yml
docs/: conf.py  index.md
docs/_static/: custom.css
pyrot/: __init__.py  config.py  logging.py  ro_interface.py
pyrot/eye_modelling/: __init__.py  clipbased_model.py  common_methods.py  ellipsoid_fit.py  match_sclera_to_markers.py  match_with_biometry.py
pyrot/eye_modelling/datamodels/: __init__.py  export.py  model_import.py  models.py  validators.py
scripts/: customization.example.py  eyemodel_import.py  fit_sclera_to_markers.py  match_eyemodel_to_biometry.py  register_model_to_clips.py  rotate_eyemodel.py  ruff.toml
